--- a/src/components/pages/blogPosts/index.module.css
+++ b/src/components/pages/blogPosts/index.module.css
@@ -1,4 +1,4 @@
-header {
+/* header {
     width: 100vw;
     height: 100px;
     position: fixed;
@@ -7,7 +7,7 @@ header {
     background-color: black;
     text-align: center;
     z-index: 100;
-}
+} */
 
 .XelluLogo {
     width: 300px;
