--- a/src/components/pages/topbar/index.module.css
+++ b/src/components/pages/topbar/index.module.css
@@ -1,19 +1,35 @@
-header {
+.Header {
     width: 100vw;
-    height: 100px;
+    height: var(--topbar-h);
     position: fixed;
     top: 0;
     left: 0;
-    background-color: black;
-    text-align: center;
-    z-index: 100;
+    background-color: rgb(20, 30, 50);
+    z-index: 110;
+    overflow: hidden;
 }
 
-.XelluLogo {
-    width: 300px;
+.Image {
+    height: 80%;
     position: absolute;
-    top: -130px;
+    border-radius: calc(var(--topbar-h) * 0.5);
     left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    animation: BubblyCat 7s ease-in-out infinite alternate, 
+        RotateCat 9s linear infinite alternate;
+}
+  
+@keyframes BubblyCat {
+    to {
+        transform: translate(+300%, -50%);
+    }
+}
+
+@keyframes RotateCat {
+    to {
+        transform: translateY(-50%) rotateZ(360deg);
+    }
 }
 
 .Items {
@@ -27,8 +43,9 @@ header {
     border-radius: 8px;
     text-align: center;
     cursor: pointer;
-    margin-right: 12px;
+    margin-left: 12px;
     box-sizing: content-box;
+    font-family: "IranSans";
 }
 
 .Items:hover {
@@ -37,59 +54,17 @@ header {
 
 .Navigator {
     text-align: right;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
 }
 
 .Container {
     width: 80%;
+    height: 100%;
     top: 50%;
     left: 50%;
     position: absolute;
     transform: translate(-50%, -50%);
-}
-
-.SearchWrapper {
-    width: 60px;
-    position: relative;
-    display: inline-block;
-    text-align: center;
-    color: #aaa;
-}
-
-.SearchWrapper > input {
-    width: 100%;
-    box-sizing: content-box;
-    padding: 0 2px;
-    border-radius: 10px;
-    outline: none;
-    border: 1px solid #aaa;
-    background-color: transparent;
-    font-size: 18px;
-    color: white;
-    padding: 0px 5px;
-    text-align: center;
-    display: none;
-}
-
-div.SearchWrapper:hover input {
-    display: inline-block;
-}
-
-div.SearchWrapper:hover svg {
-    position: absolute;
-    top: 3px;
-    right: -38px;
-}
-
-div.SearchWrapper > input:focus {
-    display: inline-block;
-}
-
-div.SearchWrapper > input:focus ~ svg {
-    position: absolute;
-    top: 3px;
-    right: -38px;
-}
-
-.SearchWrapper > svg {
-    cursor: pointer;
 }
