--- a/src/components/pages/shoots/index.module.css
+++ b/src/components/pages/shoots/index.module.css
@@ -1,8 +1,9 @@
 .Container {
     width: 100%;
-    min-height: calc(100vh - var(--topbar-h));
+    min-height: calc(100vh - var(--topbar-h) - var(--footer-h));
     position: relative;
-    color: red;
-    background-color: bisque;
+    color: black;
+    background-color: var(--background-color);
     margin-top: var(--topbar-h);
+    min-width: var(--min-width);
 }
