--- a/src/components/pages/topbar/topbar.module.css
+++ b/src/components/pages/topbar/topbar.module.css
@@ -1,12 +1,11 @@
 .Header {
-    width: 100vw;
+    width: 100%;
     height: var(--topbar-h);
-    min-width: var(--min-width);
     position: fixed;
     top: 0;
-    left: 0;
-    background-color: rgb(20, 30, 50);
-    z-index: 110;
+    right: 0;
+    background-color: var(--topbar-bg);
+    z-index: var(--layer-2);
 }
 
 .Image {
@@ -16,11 +15,11 @@
     left: 5%;
     top: 50%;
     transform: translateY(-50%);
-    animation: BubblyCat 7s ease-in-out infinite alternate, 
+    animation: BubblyCat 7s ease-in-out infinite alternate,
         RotateCat 9s linear infinite alternate;
-    z-index: 2;
+    z-index: var(--layer-3);
 }
-  
+
 @keyframes BubblyCat {
     to {
         transform: translate(+200%, -50%);
@@ -35,66 +34,80 @@
 
 .BurgerIcon {
     display: none;
-    font-size: 22px;
-    transform: translateY(3px);
 }
 
 .Items {
     background-color: transparent;
-    height: var(--topbar-h);
-    min-width: 60px;
-    font-size: 18px;
-    color: #aaa;
-    font-weight: 600;
+    height: calc(var(--topbar-h) * 0.8);
+    min-width: var(--size-10);
+    color: var(--topbar-color);
+    font-weight: var(--font-weight-1);
     border: none;
+    border-radius: var(--radius-1);
     text-align: center;
     cursor: pointer;
     box-sizing: border-box;
     font-family: "IranSans";
-    padding: 0 12px 0 0;
-}
-
-.Items:first-of-type {
-    margin-right: 12px;
+    padding-right: var(--size-2);
+    font-size: var(--size-4);
+    padding: 0 var(--size-2);
 }
 
 .Items:hover {
-    text-decoration: underline;
+    background-color: var(--topbar-bg-hover);
+    text-decoration: none;
+}
+
+.Items:nth-child(2) {
+    font-weight: var(--font-weight-9);
 }
 
 .Container {
-    width: 80%;
+    width: 90%;
     height: 100%;
     top: 50%;
     left: 50%;
     position: absolute;
     transform: translate(-50%, -50%);
-    color: #aaa;
+    color: var(--topbar-color);
 }
 
 .Navigator {
     text-align: right;
-    position: relative;
-    right: 0;
     box-sizing: border-box;
-    background-color: rgb(20, 30, 50);
+    background-color: var(--topbar-bg);
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 @media screen and (max-width: 666px) {
-    .Items:not(:first-of-type) {display: none;}
-    .BurgerIcon {display: inline-block;}
+    .Items {
+        display: none;
+    }
+    .Items:nth-child(1) {
+        display: inline-block;
+    }
+    .Items:nth-child(2) {
+        display: inline-block;
+    }
+    .Items {
+        min-width: var(--size-8);
+    }
+    /* .Items:nth-child(2) {display: list-item;} */
+    /* .BurgerIcon {display: inline-block;} */
 }
 
 @media screen and (max-width: 666px) {
     .Container.Responsive {
         width: 100%;
     }
-    .Navigator.Responsive  {
+    .Navigator.Responsive {
         position: relative;
         display: block;
     }
     .Items.Responsive {
-        padding-right: 12px;
+        padding-right: var(--size-2);
         margin-right: 0;
     }
     .Items.Responsive {
@@ -105,5 +118,9 @@
     }
     .BurgerIcon.Responsive {
         display: none;
+    }
+    .Navigator.Responsive {
+        top: 0;
+        transform: translateY(0);
     }
 }
