--- a/src/components/pages/topbar/topbar.module.css
+++ b/src/components/pages/topbar/topbar.module.css
@@ -15,8 +15,11 @@
     left: 5%;
     top: 50%;
     transform: translateY(-50%);
-    animation: BubblyCat 7s ease-in-out infinite alternate,
-        RotateCat 9s linear infinite alternate;
+    animation: var(--animation-slide-in-left), var(--animation-scale-up) reverse;
+    animation-timing-function: var(--ease-elastic-2);
+    animation-duration: 1.5s;
+    /* animation: BubblyCat 7s ease-in-out infinite alternate, */
+    /* RotateCat 9s linear infinite alternate; */
     z-index: var(--layer-3);
 }
 
